--- a/pom.xml
+++ b/pom.xml
@@ -68,15 +68,6 @@
         <role>developer</role>
       </roles>
     </developer>
-     <developer>
-      <id>pnukeid</id>
-      <name>Eka Rudito</name>
-      <email>eka@rudito.web.id</email>
-      <url>https://www.facebook.com/Eka.Rdt</url>
-      <roles>
-        <role>developer</role>
-      </roles>
-    </developer>
   </developers>
   
   <properties>
@@ -146,20 +137,6 @@
       <scope>provided</scope>
     </dependency>
     
-    <!-- 
-    JSP Starndard Tag Library, Tomcat 7 don't provide this library by default 
-    -->
-    <dependency>
-      <groupId>org.apache.taglibs</groupId>
-      <artifactId>taglibs-standard-spec</artifactId>
-      <version>1.2.3</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.taglibs</groupId>
-      <artifactId>taglibs-standard-impl</artifactId>
-      <version>1.2.3</version>
-    </dependency>
-     
     <!-- Spring WebMVC and dependencies -->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -169,6 +146,19 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>${jackson.version}</version>
+    </dependency>
+    
+
+    <!--
+    Support for spring core.
+    -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aspects</artifactId>
     </dependency>
     
     <!--
@@ -198,16 +188,6 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-validator</artifactId>
       <version>5.1.3.Final</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.el</groupId>
-      <artifactId>javax.el-api</artifactId>
-      <version>2.2.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.glassfish.web</groupId>
-      <artifactId>javax.el</artifactId>
-      <version>2.2.5</version>
     </dependency>
     
     <!--
