--- a/src/main/resources/spring/application.properties
+++ b/src/main/resources/spring/application.properties
@@ -1,3 +1,6 @@
+## If you consider to store your credential in more secure way, 
+## please use "application.local.properties" file
+## or "${user.home}/.bpersonalia/application.properties" file.
 org.bareng.jdbc.conn.driverClassName=org.postgresql.Driver
 org.bareng.jdbc.conn.url=jdbc:postgresql://localhost/bpersonalia
 org.bareng.jdbc.conn.username=bpersonalia
