--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,3 +10,4 @@ log4j.category.org.apache.ibatis=INFO
 log4j.category.org.mybatis.spring=INFO
 log4j.category.org.apache.tiles=INFO
 log4j.category.org.apache.commons.digester=INFO
+log4j.category.net.sf.ehcache=INFO
