--- a/pom.xml
+++ b/pom.xml
@@ -385,7 +385,12 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
-            <version>3.3.2-1</version>
+            <version>3.3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootswatch-paper</artifactId>
+            <version>3.3.1+2</version>
         </dependency>
     </dependencies>
 
